# arduino-liblc3

./: CMakeLists.txt  README.md  library.properties
src/: lc3.h
